--- a/app/src/main/res/layout/list_meal_item.xml
+++ b/app/src/main/res/layout/list_meal_item.xml
@@ -25,8 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
-            android:id="@+id/tv_arrival_date"
+            android:id="@+id/tv_country"
             android:textSize="15sp"
             android:gravity="center"
             android:textStyle="bold"
@@ -35,8 +36,20 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:layout_margin="5dp"/>
+
         <TextView
-            android:id="@+id/tv_check_out_date"
+            android:id="@+id/tv_type"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:id="@+id/tv_time"
             android:textSize="15sp"
             android:gravity="center"
             android:textStyle="bold"
