--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/main_color">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_add"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:stateListAnimator="@null"
-        android:layout_gravity="right|top"
-        android:background="@drawable/ic_bt_add"
-        android:layout_marginTop="35dp"
-        android:layout_marginRight="20dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,6 +16,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="@string/CuisinesOfTheWorld"
+
             android:gravity="center"
             android:textSize="35sp"
             android:textStyle="bold"
@@ -39,6 +30,17 @@
             android:layout_weight="5"
             android:background="@drawable/ic_recycler_back"
             android:padding="12dp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_add"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|top"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/ic_bt_add"
+            android:stateListAnimator="@null" />
 
     </LinearLayout>
 
